did somme modification if footer background, added lines in git carsoal and changed contact button color scheme

--- a/achivement.html
+++ b/achivement.html
@@ -24,7 +24,8 @@
   </script>
 </head>
 <body>
-
+<h2>Achievement</h2>
+<div class="line-right-div"></div>
 <div class="achievement-container">
   <!-- Achievement 1 -->
   <div class="achievement" onclick="showProof('assets/images/shubhImage1.jpg', 'Description of Achievement 1 goes here.')">
