--- a/researchContribution.html
+++ b/researchContribution.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="css/researchContributuion.css">
 <h2>Research Contribution</h2>
+<div class="line-right-div"></div>
         <div class="tech-stack">
             <div class="tech-category">
                 <h2>Exploring EEG Characteristics and Machine Learning Classifiers for Accurate Detection of Eye-Blink Mistakes</h2>
