--- a/tech-stack.html
+++ b/tech-stack.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="css/tech-stack.css">
 <h2>Tech Stack</h2>
+<div class="line-right-div"></div>
         <div class="tech-stack">
             <div class="tech-category">
                 <h2>Web Dev</h2>
