updated intro content

--- a/intro.html
+++ b/intro.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/intro.css">
 <div class="intro-container">
     <h2>Introduction</h2>
-    <p>My name is <strong>Shubh Gupta</strong>, and I'm on a mission to revolutionize the world through the power of <strong>Artificial Intelligence</strong>. As a passionate student at <strong>VIT Bhopal University</strong>, I envision a future where AI transforms lives on an unprecedented scale.</p>
+    <p>My name is <strong>Shubh Gupta</strong>, As a passionate student at <strong>VIT Bhopal University</strong>, I envision a future where AI transforms lives on an unprecedented scale.</p>
 
     <p>My journey in the realm of <strong>Machine Learning</strong> is fueled by an insatiable curiosity and a relentless pursuit of knowledge. I thrive in the dynamic landscape of this rapidly evolving industry, constantly pushing boundaries and exploring new horizons.</p>
 
