added home in new portifolio

--- a/achivement.html
+++ b/achivement.html
@@ -30,7 +30,7 @@
   <!-- Achievement 1 -->
   <div class="achievement" onclick="showProof('assets/images/shubhImage1.jpg', 'Description of Achievement 1 goes here.')">
     <h2>Achievement 1</h2>
-    <p>Description of Achievement 1 goes here.</p>
+    <p>I have Successfully Published Book Chapter</p>
     <div class="a1">
       <span class="close">&times;</span>
       <p>Content of Achievement 1 details goes here.</p>
