updated css and position

--- a/new/index.html
+++ b/new/index.html
@@ -18,13 +18,20 @@
     </header>
 
     <section class="home">
-        <img class="profile-image" src="shubhImage6.png" alt="Profile Image">
-        <div class="home-name">
-            <span class="profession" id="profession"></span>
-            <br>
-            <span class="name">Shubh Gupta</span>
+        <div class="content-wrapper">
+            <div class="left">
+                <div class="home-name">
+                    <span class="profession" id="profession"></span>
+                    <br>
+                    <span class="name">Shubh Gupta</span>
+                </div>
+            </div>
+            <div class="right">
+                <img class="profile-image" src="shubhImage6.png" alt="Profile Image">
+            </div>
         </div>
     </section>
+    
 
     <section class="about-me home" id="about-me">
         <!-- <img class="profile-image" src="shubhImage6.png" alt="Profile Image"> -->
