updated project section

--- a/new/index.html
+++ b/new/index.html
@@ -103,7 +103,14 @@
             <div id="projs" class="projs">
                 <div id="ml" class="ml">
                     <div class="ml-prjs">
-                        <div class="prj">Evolkai</div>
+                        <div class="prj">
+                            <span class="heading">
+                                EvolkAI
+                            </span>
+                            <p>
+                                I built EvolkAI to share technical insights on machine learning, deep learning, and computer vision. The site offers articles, tutorials, and resources to enhance understanding and application in these fields. Tech stack used: HTML, CSS, JavaScript.
+                            </p>
+                        </div>
                         <div class="prj">Cancer</div>
                         <div class="prj">Human Gait</div>
                         <div class="prj prj4">Energy Insights</div>
