updated css, solved bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <nav>
             <span class="name-header">Shubh Gupta</span>
-            <span class="menu-icon fas fa-bars" id="menu-icon" aria-label="Menu"></span>
+            <div class="menu-icon" id="menu-icon">&#9776;</div>
             <div class="nav-links" id="nav-links">
                 <a href="#home" id="nav-home">Home</a>
                 <a href="#about-me" id="nav-about">About Me</a>
