--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons@2.15.1/css/devicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons@1.8.0/css/devicons.min.css">
 
@@ -27,7 +28,7 @@
     <header>
         <nav>
             <span class="name-header">Shubh Gupta</span>
-            <div class="menu-icon" id="menu-icon">&#9776;</div>
+            <div class="menu-icon" id="menu-icon"><i class="bi bi-list"></i></div>
             <div class="nav-links" id="nav-links">
                 <a href="#home" id="nav-home">Home</a>
                 <a href="#about-me" id="nav-about">About Me</a>
@@ -40,11 +41,11 @@
     </header>
 
     <main>
-        <section id="home">
+        <section id="home" class="home">
             <div class="content-wrapper">
                 <div class="left left-home">
                     <div class="home-name">
-                        <span id="profession" class="profession">Prof</span><br>
+                        <span id="profession" class="profession"></span><br>
                         <span class="name">Shubh Gupta</span>
                     </div>
                 </div>
@@ -75,7 +76,7 @@
                         <li><i class="fab fa-html5"></i> HTML5 <span class="skill-level advanced">Advanced</span></li>
                         <li><i class="fab fa-css3-alt"></i> CSS3 <span class="skill-level intermediate">Intermediate</span></li>
                         <li><i class="fab fa-js-square"></i> JavaScript <span class="skill-level beginner">Beginner</span></li>
-                        <li><i class="fab fa-php"></i> PHP <span class="skill-level intermediate">Intermediate</span></li>
+                        <li><i class="fab fa-php"></i> PHP <span class="skill-level beginner">Beginner</span></li>
                         <li><i class="fas fa-database"></i> MySQL <span class="skill-level intermediate">Intermediate</span></li>
                     </ul>
                 </div>
