--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav aria-label="Main navigation">
             <span class="name-header">Shubh Gupta</span>
             <div class="menu-icon" id="menu-icon"><i class="bi bi-list"></i></div>
             <div class="nav-links" id="nav-links">
@@ -39,6 +39,7 @@
             </div>
         </nav>
     </header>
+    
 
     <main>
         <section id="home" class="home">
