add resume download links and improve header styling

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
           <a href="#research" id="nav-research">Research</a>
           <a href="#connect-me" id="nav-connect">Connect</a>
         </div>
+        <a href="assets/resume/general_resume_shubh.pdf" class="header-resume-btn" download>
+          <i class="fas fa-file-download"></i>
+          Resume
+        </a>
       </nav>
     </header>
 
@@ -112,7 +116,7 @@
             journals. When I'm not coding, I contribute to open-source projects
             and mentor aspiring developers.
           </p>
-          <a href="path/to/your-resume.pdf" class="resume-btn" download>
+          <a href="assets/resume/general_resume_shubh.pdf" class="resume-btn" download>
             <i class="fas fa-file-download"></i>
             Resume
           </a>
