enhance research section styles and update resume links; improve button animations and layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
           <a href="#research" id="nav-research">Research</a>
           <a href="#connect-me" id="nav-connect">Connect</a>
         </div>
-        <a href="assets/resume/general_resume_shubh.pdf" class="header-resume-btn" download>
+        <a
+          href="assets/resume/general_resume_shubh.pdf"
+          class="header-resume-btn"
+          download
+        >
           <i class="fas fa-file-download"></i>
           Resume
         </a>
@@ -116,7 +120,11 @@
             journals. When I'm not coding, I contribute to open-source projects
             and mentor aspiring developers.
           </p>
-          <a href="assets/resume/general_resume_shubh.pdf" class="resume-btn" download>
+          <a
+            href="assets/resume/general_resume_shubh.pdf"
+            class="resume-btn"
+            download
+          >
             <i class="fas fa-file-download"></i>
             Resume
           </a>
@@ -323,57 +331,88 @@
 
       <section id="research">
         <div class="research-header">
-          <h2>Research Papers</h2>
+          <h2>Research Publications</h2>
+          <p class="research-subtitle">
+            Exploring the frontiers of technology through academic research
+          </p>
         </div>
         <div class="research-container">
-          <article class="research-paper">
-            <div class="paper-head">
-              <span class="heading"
-                >Exploring EEG Characteristics with Machine Learning Classifiers
-                for Accurate Detection of Eye Blink Mistakes</span
-              >
-              <a
-                href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003457176-6/exploring-eeg-characteristics-machine-learning-classifiers-accurate-detection-eye-blink-mistakes-shubh-gupta-divya-thakur-akshat-rastogi-rupal-mishra-sandeep-balabantaray-meet-bikhani?context=ubx&refId=636decb3-a35c-49bd-8abb-a8acc5ad92a6"
-                class="paper-link"
-                aria-label="Read more about Exploring EEG Characteristics"
-                >Read more</a
-              >
+          <article class="research-paper" data-aos="fade-up">
+            <div class="paper-content">
+              <div class="paper-head">
+                <h3 class="paper-title">
+                  Exploring EEG Characteristics with Machine Learning
+                  Classifiers for Accurate Detection of Eye Blink Mistakes
+                </h3>
+                <div class="paper-meta">
+                  <span class="paper-date">Published: 2023</span>
+                  <span class="paper-publisher">Taylor & Francis</span>
+                </div>
+                <a
+                  href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003457176-6/exploring-eeg-characteristics-machine-learning-classifiers-accurate-detection-eye-blink-mistakes-shubh-gupta-divya-thakur-akshat-rastogi-rupal-mishra-sandeep-balabantaray-meet-bikhani"
+                  class="paper-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <span>Read Paper</span>
+                  <i class="fas fa-external-link-alt"></i>
+                </a>
+              </div>
+              <p class="paper-description">
+                This paper presents a framework for accurately predicting eye
+                movements using EEG data and machine learning classifiers. We
+                tested various algorithms including Decision Tree, AdaBoost, and
+                Random Forest, achieving up to 96% accuracy with Random Forest.
+                I, Shubh Gupta, as the main author, contributed to the machine
+                learning implementation and the writing of the paper, with
+                support from my co-authors. The findings offer significant
+                insights for improving models in bioinformatics and enhancing
+                our understanding of visual perception and attention.
+              </p>
+              <div class="paper-tags">
+                <span>Machine Learning</span>
+                <span>EEG Analysis</span>
+                <span>Bioinformatics</span>
+              </div>
             </div>
-            <p class="paper-description">
-              This paper presents a framework for accurately predicting eye
-              movements using EEG data and machine learning classifiers. We
-              tested various algorithms including Decision Tree, AdaBoost, and
-              Random Forest, achieving up to 96% accuracy with Random Forest. I,
-              Shubh Gupta, as the main author, contributed to the machine
-              learning implementation and the writing of the paper, with support
-              from my co-authors. The findings offer significant insights for
-              improving models in bioinformatics and enhancing our understanding
-              of visual perception and attention.
-            </p>
           </article>
-          <article class="research-paper">
-            <div class="paper-head">
-              <span class="heading"
-                >Machine Learning Advancements in Polymer Material
-                Creation</span
-              >
-              <a
-                href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003457176-7/machine-learning-advancements-polymer-material-creation-akshat-rastogi-divya-thakur-shubh-gupta-rupal-mishra-sandeep-balabantaray-meet-bikhani?context=ubx&refId=f4e28ca5-a35d-4d3f-90ab-d47d1e2d9691"
-                class="paper-link"
-                aria-label="Read more about Machine Learning Advancements in Polymer Material Creation"
-                >Read more</a
-              >
+
+          <article class="research-paper" data-aos="fade-up">
+            <div class="paper-content">
+              <div class="paper-head">
+                <h3 class="paper-title">
+                  Machine Learning Advancements in Polymer Material Creation
+                </h3>
+                <div class="paper-meta">
+                  <span class="paper-date">Published: 2023</span>
+                  <span class="paper-publisher">Taylor & Francis</span>
+                </div>
+                <a
+                  href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003457176-7/machine-learning-advancements-polymer-material-creation-akshat-rastogi-divya-thakur-shubh-gupta-rupal-mishra-sandeep-balabantaray-meet-bikhani"
+                  class="paper-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <span>Read Paper</span>
+                  <i class="fas fa-external-link-alt"></i>
+                </a>
+              </div>
+              <p class="paper-description">
+                This research explores how machine learning can enhance polymer
+                material design by predicting and optimizing properties. We used
+                models like MultinomialNB, GaussianNB, MLPClassifier, and
+                DecisionTreeClassifier, achieving up to 95% accuracy. My
+                contribution focused on data preprocessing, model training, and
+                result analysis. The study highlights machine learning's
+                potential to uncover patterns in polymer behavior, facilitating
+                advancements in material science.
+              </p>
+              <div class="paper-tags">
+                <span>Machine Learning</span>
+                <span>Material Science</span>
+                <span>Polymer Design</span>
+              </div>
             </div>
-            <p class="paper-description">
-              This research explores how machine learning can enhance polymer
-              material design by predicting and optimizing properties. We used
-              models like MultinomialNB, GaussianNB, MLPClassifier, and
-              DecisionTreeClassifier, achieving up to 95% accuracy. My
-              contribution focused on data preprocessing, model training, and
-              result analysis. The study highlights machine learning's potential
-              to uncover patterns in polymer behavior, facilitating advancements
-              in material science.
-            </p>
           </article>
         </div>
       </section>
