implement lazy loading for certificate images and add load more functionality; enhance certificates section styles and responsiveness

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/7.18.0/simple-icons.min.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="js/index.js" defer></script>
     <script
       type="text/javascript"
@@ -74,7 +77,8 @@
           <a href="#about-me" id="nav-about">About Me</a>
           <a href="#tech-skills" id="nav-tech-skills">Tech Skills</a>
           <a href="#projects" id="nav-projects">Projects</a>
-          <a href="#research" id="nav-research">Research</a>
+          <a href="#research" id="nav-certificate">Research</a>
+          <a href="#certificates" id="nav-research">Certificates</a>
           <a href="#connect-me" id="nav-connect">Connect</a>
         </div>
         <a
@@ -106,10 +110,18 @@
                 title="GitHub Profile"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://linkedin.com/in/ishubhgupta" target="_blank" rel="noopener noreferrer" title="LinkedIn Profile"
+              <a
+                href="https://linkedin.com/in/ishubhgupta"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="LinkedIn Profile"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="https://twitter.com/ishubhguptaa" target="_blank" rel="noopener noreferrer" title="Twitter Profile"
+              <a
+                href="https://twitter.com/ishubhguptaa"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Twitter Profile"
                 ><i class="fab fa-twitter"></i
               ></a>
               <div class="social-line"></div>
@@ -604,6 +616,206 @@
               </div>
             </div>
           </article>
+        </div>
+      </section>
+
+      <section id="certificates">
+        <div class="certificates-header">
+          <h2>Certifications</h2>
+          <p class="certificates-subtitle">
+            Professional certifications and achievements
+          </p>
+        </div>
+
+        <div class="certificates-grid">
+          <!-- Add your certificates here. Example: -->
+           <!-- certi1 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-1-coursera-applied-ml.jpg"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/Certificates/certi-1-coursera-applied-ml.jpg"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Applied Machine Learning In Python</h3>
+              <p class="issuer">Coursera</p>
+              <p class="issue-date">Issued Jan 2024</p>
+              <div class="certificate-tags">
+                <span>Machine Learning</span>
+                <span>Python</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Add your certificates here. Example: -->
+           <!-- certi2 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-2-buildathon.png"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/Certificates/certi-2-buildathon.png"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Buildathon 2024</h3>
+              <p class="issuer">Preprod Corp</p>
+              <p class="issue-date">Issued Aug 2024</p>
+              <div class="certificate-tags">
+                <span>Python</span>
+                <span>MLops</span>
+                <span>Docker</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Add your certificates here. Example: -->
+           <!-- certi3 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-3-kaggle-1.png"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/certificates/certi-3-kaggle-1.png"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Intermediate Machine Learning</h3>
+              <p class="issuer">Kaggle</p>
+              <p class="issue-date">Issued Jan 2023</p>
+              <div class="certificate-tags">
+                <span>Machine Learning</span>
+                <span>Python</span>
+              </div>
+            </div>
+          </div>
+           <!-- certi4 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-4-kaggle-2.png"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/certificates/certi-4-kaggle-2.png"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Introduction to Deep Learning</h3>
+              <p class="issuer">Kaggle</p>
+              <p class="issue-date">Issued Feb 2023</p>
+              <div class="certificate-tags">
+                <span>Deep Learning</span>
+                <span>Python</span>
+              </div>
+            </div>
+          </div>
+           <!-- certi5 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-5-kaggle-3.png"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/certificates/certi-5-kaggle-3.png"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Introduction to Machine Learning</h3>
+              <p class="issuer">Coursera</p>
+              <p class="issue-date">Issued Mar 2024</p>
+              <div class="certificate-tags">
+                <span>Python</span>
+                <span>Machine Learning</span>
+              </div>
+            </div>
+          </div>
+           <!-- certi3 -->
+          <div class="certificate-card" data-aos="fade-up">
+            <div class="certificate-image">
+              <img
+                src="assets/Certificates/certi-6-mathworks-onramp.jpg"
+                alt="Python Certification"
+                loading="lazy"
+              />
+              <div class="certificate-overlay">
+                <a
+                  href="assets/certificates/certi-6-mathworks-onramp.jpg"
+                  class="view-certificate"
+                  target="_blank"
+                >
+                  <i class="fas fa-expand"></i>
+                  View Certificate
+                </a>
+              </div>
+            </div>
+            <div class="certificate-info">
+              <h3>Matlab onramp</h3>
+              <p class="issuer">Mathworks</p>
+              <p class="issue-date">Issued Sept 2022</p>
+              <div class="certificate-tags">
+                <span>MATLAB</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Add more certificates following the same structure -->
+        </div>
+
+        <div class="certificates-loader">
+          <button class="load-more">
+            Load More
+            <i class="fas fa-chevron-down"></i>
+          </button>
         </div>
       </section>
 
