refactor header styles for improved aesthetics and responsiveness; update navigation menu icon and enhance link interactions

--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
     <header>
       <nav aria-label="Main navigation">
         <span class="name-header">Shubh Gupta</span>
-        <div class="menu-icon" id="menu-icon"><i class="bi bi-list"></i></div>
+        <div class="menu-icon" id="menu-icon">
+          <i class="fas fa-bars"></i>
+        </div>
         <div class="nav-links" id="nav-links">
-          <a href="#home" id="nav-home">Home</a>
-          <a href="#about-me" id="nav-about">About Me</a>
-          <a href="#tech-skills" id="nav-tech-skills">Tech Skills</a>
-          <a href="#projects" id="nav-projects">Projects</a>
-          <a href="#research" id="nav-certificate">Research</a>
-          <a href="#certificates" id="nav-research">Certificates</a>
-          <a href="#connect-me" id="nav-connect">Connect</a>
+          <a href="#home" class="active">Home</a>
+          <a href="#about-me">About Me</a>
+          <a href="#tech-skills">Tech Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#research">Research</a>
+          <a href="#certificates">Certificates</a>
+          <a href="#connect-me">Connect</a>
         </div>
         <a
           href="assets/resume/general_resume_shubh.pdf"
@@ -629,7 +631,7 @@
 
         <div class="certificates-grid">
           <!-- Add your certificates here. Example: -->
-           <!-- certi1 -->
+          <!-- certi1 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
@@ -660,7 +662,7 @@
           </div>
 
           <!-- Add your certificates here. Example: -->
-           <!-- certi2 -->
+          <!-- certi2 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
@@ -692,7 +694,7 @@
           </div>
 
           <!-- Add your certificates here. Example: -->
-           <!-- certi3 -->
+          <!-- certi3 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
@@ -721,7 +723,7 @@
               </div>
             </div>
           </div>
-           <!-- certi4 -->
+          <!-- certi4 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
@@ -750,7 +752,7 @@
               </div>
             </div>
           </div>
-           <!-- certi5 -->
+          <!-- certi5 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
@@ -779,7 +781,7 @@
               </div>
             </div>
           </div>
-           <!-- certi3 -->
+          <!-- certi3 -->
           <div class="certificate-card" data-aos="fade-up">
             <div class="certificate-image">
               <img
