refactor responsive styles for mobile devices; simplify HTML structure in About Me section and enhance layout adjustments

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
       </section>
       <section id="about-me" class="about-me">
-        <h2 class="about-title">About Me</h2>
+        <h2>About Me</h2>
         <div class="about-card">
           <p class="about-text">
             I am a passionate software developer with a deep fascination for
